# midapack

./: .gitignore  INSTALL.md  pyproject.toml  requirements.txt  ruff.toml
cmake/: FindLAPACKE.cmake
mappraiser/: CMakeLists.txt  pyproject.toml
mappraiser/examples/: toast_so_sim.py
mappraiser/include/mappraiser/: map.h  outputs.h  precond.h  weight.h
mappraiser/python/: CMakeLists.txt  __init__.py  tests.py
mappraiser/python/toast/: CMakeLists.txt  __init__.py  buffer.py  interface.py  mappraiser.py  operator.py  utils.py
mappraiser/python/toast_op/: CMakeLists.txt  __init__.py  interface.py  operator.py  test.py  utils.py
mappraiser/python/workflow/: __init__.py  proc_mapmaker.py
mappraiser/python/wrapper/: CMakeLists.txt  __init__.py  map.py  types.py
mappraiser/src/: CMakeLists.txt  mapping.c  mappraiser.c  outputs.c  pcg_true.c  precond.c  weight.c
mappraiser/test/: debug_run.cpp
