# Determine our python install location and set up a rule to install the modules
find_package(Python3 3.10 COMPONENTS Interpreter REQUIRED)

execute_process(
    COMMAND "${Python3_EXECUTABLE}" -c "if True:
        import sys
        print('{}.{}'.format(sys.version_info.major, sys.version_info.minor))"
    OUTPUT_VARIABLE PYTHON_MAJORMINOR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)

# Hardcode this to "lib" for now, since lib32/lib64 is a pain
# to use on many systems.
#set(PYTHON_SITE
#    "${CMAKE_INSTALL_LIBDIR}/python${PYTHON_MAJORMINOR}/site-packages")
set(PYTHON_SITE "lib/python${PYTHON_MAJORMINOR}/site-packages/mappraiser")

# Install the top-level __init__.py file
install(FILES
    __init__.py
    DESTINATION ${PYTHON_SITE}
)

add_subdirectory(toast)
add_subdirectory(workflow)
add_subdirectory(wrapper)
